--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@fastify/compress": "^8.0.1",
+    "@fastify/compress": "^7.0.3",
     "@fastify/cors": "^10.0.1",
-    "@fastify/static": "^8.0.1",
+    "@fastify/static": "^7.0.4",
     "@nestjs/common": "^10.4.4",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.4",
@@ -45,6 +45,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
