Add X API Key configuration

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,9 @@ DB_DATABASE = "vsocial"
 DB_SYNCHRONIZE = true
 DB_LOGGING = false
 
+# X API Key
+X_API_KEY = "ApiKet"
+X_API_SECRET = "ApiSecret"
+X_BARER_TOKEN = "ApiToken"
+X_CLIENT_ID = "ClientID"
+X_CLIENT_SECRET = "ClientSecret"
