--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fastify/compress": "^7.0.3",
     "@fastify/cors": "^10.0.1",
     "@fastify/static": "^7.0.4",
+    "@nestjs/axios": "^3.1.0",
     "@nestjs/common": "^10.4.4",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.4",
@@ -37,6 +38,7 @@
     "@nestjs/platform-fastify": "^10.4.4",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
