--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 PORT = 3000
+SERVICE_URL = "http://localhost:3000"
 
 # JWT Config
 JWT_SECRET = "VSocial"
@@ -21,3 +22,4 @@ X_API_SECRET = "ApiSecret"
 X_BARER_TOKEN = "ApiToken"
 X_CLIENT_ID = "ClientID"
 X_CLIENT_SECRET = "ClientSecret"
+X_STATE = "VSocial"
